New indicator widget type.

--- a/brain4it-manager/brain4it-manager-web/src/main/webapp/dashboard.html
+++ b/brain4it-manager/brain4it-manager-web/src/main/webapp/dashboard.html
@@ -25,6 +25,7 @@
     <script type="text/javascript" src="js/dashboard/widgets/GaugeWidget.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/dashboard/widgets/GraphWidget.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/dashboard/widgets/ImageWidget.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/dashboard/widgets/IndicatorWidget.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/dashboard/widgets/LedWidget.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/dashboard/widgets/RangeWidget.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/dashboard/widgets/SelectWidget.js" charset="utf-8"></script>
