--- a/brain4it-manager/brain4it-manager-web/src/main/webapp/dashboard.html
+++ b/brain4it-manager/brain4it-manager-web/src/main/webapp/dashboard.html
@@ -9,6 +9,8 @@
     <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="favicons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="favicons/android-chrome-512x512.png">
     <link rel="manifest" href="favicons/manifest.json">
     <link rel="stylesheet" type="text/css" href="css/web_dialog.css">
     <link rel="stylesheet" type="text/css" href="css/toolbar.css">
