--- a/brain4it-manager/brain4it-manager-web/src/main/webapp/manager.html
+++ b/brain4it-manager/brain4it-manager-web/src/main/webapp/manager.html
@@ -1,4 +1,5 @@
-<html manifest="manager.appcache">
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Brain4it Manager</title>
     <meta charset="UTF-8">
@@ -49,7 +50,7 @@
       <div id="config">
         <div id="toolbar"></div>
         <div id="workspace_label"></div>
-        <div id="tree"></div>        
+        <div id="tree"></div>
       </div>
       <div id="content">
       </div>
