--- a/brain4it-manager/brain4it-manager-web/src/main/webapp/dashboard.html
+++ b/brain4it-manager/brain4it-manager-web/src/main/webapp/dashboard.html
@@ -1,4 +1,5 @@
-<html manifest="dashboard.appcache">
+<!DOCTYPE html>
+<html lang="en">
   <head>
     <title>Brain4it Dashboard</title>
     <meta charset="UTF-8">
@@ -33,9 +34,9 @@
     <script type="text/javascript" src="js/dashboard/widgets/SelectWidget.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/dashboard/widgets/StickWidget.js" charset="utf-8"></script>
     <script type="text/javascript" src="js/dashboard/widgets/SwitchWidget.js" charset="utf-8"></script>
-    <script type="text/javascript">      
+    <script type="text/javascript">
       var dashboard;
-  
+
       function init()
       {
         var params = getQueryParams();
@@ -45,7 +46,7 @@
         dashboard = new Brain4it.Dashboard(serverUrl, module, accessKey);
         dashboard.init(document.body);
       }
-      
+
       function show()
       {
         dashboard.show();
