New modbus library.

--- a/brain4it-web/src/main/resources/pages/libraries.html
+++ b/brain4it-web/src/main/resources/pages/libraries.html
@@ -46,6 +46,10 @@
               <td>SNMP, JMX and HNAP protocol functions.</td>
             </tr>
             <tr>
+              <td><a href="library_modbus.html">Modbus library</a></td>
+              <td>Modbus protocol functions.</td>
+            </tr>
+            <tr>
               <td><a href="library_mqtt.html">Mqtt library</a></td>
               <td>MQTT (Message Queue Telemetry Transport) protocol functions.</td>
             </tr>
