Update references in download page.

--- a/brain4it-web/src/main/resources/pages/download.html
+++ b/brain4it-web/src/main/resources/pages/download.html
@@ -30,17 +30,17 @@
             <tr>
               <td><img src="images/java.svg" alt="" class="platform_logo">Standalone</td>
               <td>Standalone server for Windows, Linux and MacOS
-                <span class="small">Core, Module (+full: Kafka, Database, Mail, Management, Mqtt, Neural, Nlp, Serial, Tts, Vision, Weather, Xmpp)</span>
+                <span class="small">Core, Module (+full: Kafka, Database, Mail, Management, Modbus, Mqtt, Neural, Nlp, Serial, Tts, Vision, Weather, Xmpp)</span>
               </td>
               <td class="text-center">
                 <div>660 Kb</div>
-                <a href="http://smartcity.santfeliu.cat/download/brain4it-server-standalone-@@build_version@@.zip">
+                <a href="/download/brain4it-server-standalone-@@build_version@@.zip">
                   <img src="images/download.svg" class="icon" alt="download">
                 </a>                
               </td>
               <td class="text-center">
                 <div>28 Mb</div>
-                <a href="http://smartcity.santfeliu.cat/download/brain4it-server-standalone-full-@@build_version@@.zip">
+                <a href="/download/brain4it-server-standalone-full-@@build_version@@.zip">
                   <img src="images/download.svg" class="icon" alt="download">
                 </a>
               </td>
@@ -48,17 +48,17 @@
             <tr>
               <td><img src="images/java.svg" alt="" class="platform_logo">Swing</td>
               <td>Standalone server with a screen for Windows, Linux and MacOS
-              <span class="small">Core, Module, Swing (+full: Kafka, Database, Mail, Management, Mqtt, Neural, Nlp, Serial, Tts, Vision, Weather, Xmpp)</span>
+              <span class="small">Core, Module, Swing (+full: Kafka, Database, Mail, Management, Modbus, Mqtt, Neural, Nlp, Serial, Tts, Vision, Weather, Xmpp)</span>
               </td>
               <td class="text-center">
                 <div>670 Kb</div>
-                <a href="http://smartcity.santfeliu.cat/download/brain4it-server-swing-@@build_version@@.zip">
+                <a href="/download/brain4it-server-swing-@@build_version@@.zip">
                   <img src="images/download.svg" class="icon" alt="download">
                 </a>
               </td>
               <td class="text-center">
                 <div>28 Mb</div>
-                <a href="http://smartcity.santfeliu.cat/download/brain4it-server-swing-full-@@build_version@@.zip">
+                <a href="/download/brain4it-server-swing-full-@@build_version@@.zip">
                   <img src="images/download.svg" class="icon" alt="download">
                 </a>
               </td>
@@ -66,17 +66,17 @@
             <tr>
               <td><img src="images/raspberry.svg" alt="" class="platform_logo">Raspberry Pi</td>
               <td>Standalone server for Raspberry Pi devices with Raspbian OS
-              <span class="small">Core, Module, RaspberryPi (+full: Kafka, Database, Mail, Management, Mqtt, Neural, Nlp, Serial, Tts, Vision, Weather, Xmpp)</span>
+              <span class="small">Core, Module, RaspberryPi (+full: Kafka, Database, Mail, Management, Modbus, Mqtt, Neural, Nlp, Serial, Tts, Vision, Weather, Xmpp)</span>
               </td>
               <td class="text-center">
                 <div>1.4 Mb</div>
-                <a href="http://smartcity.santfeliu.cat/download/brain4it-server-raspberrypi-@@build_version@@.zip">
+                <a href="/download/brain4it-server-raspberrypi-@@build_version@@.zip">
                   <img src="images/download.svg" class="icon" alt="download">
                 </a>                
               </td>
               <td class="text-center">
                 <div>28 Mb</div>
-                <a href="http://smartcity.santfeliu.cat/download/brain4it-server-raspberrypi-full-@@build_version@@.zip">
+                <a href="/download/brain4it-server-raspberrypi-full-@@build_version@@.zip">
                   <img src="images/download.svg" class="icon" alt="download">
                 </a>
               </td>
@@ -88,7 +88,7 @@
               </td>
               <td class="text-center">
                 <div>440 Kb</div>
-                <a href="http://smartcity.esantfeliu.org/download/brain4it-server-android-@@build_version@@.apk">
+                <a href="/download/brain4it-server-android-@@build_version@@.apk">
                   <img src="images/download.svg" class="icon" alt="download">
                 </a>                
               </td>
@@ -99,14 +99,14 @@
             <tr>
               <td><img src="images/java.svg" alt="" class="platform_logo">J2EE</td>
               <td>war file for J2EE servers
-                  <span class="small">Core, Module, Database, Kafka, Mail, Management, Mqtt, Neural, Nlp, Serial, Vision, Weather, Xmpp</span>
+                  <span class="small">Core, Module, Database, Kafka, Mail, Management, Modbus, Mqtt, Neural, Nlp, Serial, Vision, Weather, Xmpp</span>
               </td>
               <td class="text-center">
                 -
               </td>
               <td class="text-center">
                 <div>20 Mb</div>
-                <a href="http://smartcity.esantfeliu.org/download/brain4it-server-web-@@build_version@@.war">
+                <a href="/download/brain4it-server-web-@@build_version@@.war">
                   <img src="images/download.svg" class="icon" alt="download">
                 </a>
               </td>
@@ -131,7 +131,7 @@
               <td>Manager application for Windows, Linux and MacOS</td>
               <td class="text-center">
                 <div>1.2 Mb</div>
-                <a href="http://smartcity.esantfeliu.org/download/brain4it-manager-swing-@@build_version@@-app.jar">
+                <a href="/download/brain4it-manager-swing-@@build_version@@-app.jar">
                   <img src="images/download.svg" class="icon" alt="download">
                 </a>
               </td>
@@ -141,7 +141,7 @@
               <td>Manager application for Android 4.1.2 and above</td>
               <td class="text-center">
                 <div>560 Kb</div>
-                <a href="http://smartcity.esantfeliu.org/download/brain4it-manager-android-@@build_version@@.apk">
+                <a href="/download/brain4it-manager-android-@@build_version@@.apk">
                   <img src="images/download.svg" class="icon" alt="download">
                 </a>
               </td>
@@ -151,7 +151,7 @@
               <td>Manager web application for all devices</td>
               <td class="text-center">
                 <div>1.4 Mb</div>
-                <a href="http://smartcity.esantfeliu.org/download/brain4it-manager-web-@@build_version@@.war">
+                <a href="/download/brain4it-manager-web-@@build_version@@.war">
                   <img src="images/download.svg" class="icon" alt="download">
                 </a>
               </td>
